<resources>
    <string name="app_name">LabGuessNumber</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_second">SecondActivity</string>

    <string name="instructions">Enter a Number between 1 and 100</string>
    <string name="btnGuess">Guess</string>
    <string name="btnSurrender">Give Up</string>
    <string name="playAgain">Play Again</string>
    <string name="or">OR </string>
    <string name="name">Guess a Number</string>
    <string name="statsTitle">Game Statistics</string>

</resources>
