<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/name"
        android:text="@string/name"
        android:textSize="32sp"
        android:textColor="#990000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="40dp"
        />

    <EditText
        android:id="@+id/input"
        android:textSize="32sp"
        android:ems="10"
        android:inputType="number"
        android:layout_below="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/instructions"
        android:text="@string/instructions"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/instructions"
        android:layout_centerHorizontal="true"
        >

        <Button
            android:id="@+id/btnGuess"
            android:text="@string/btnGuess"
            android:textSize="24sp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:onClick="submitGuess"
            />

        <TextView
            android:id="@+id/or"
            android:text="@string/or"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingTop="20dp"
            />

        <Button
            android:id="@+id/btnSurrender"
            android:text="@string/btnSurrender"
            android:textSize="24sp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:onClick="surrender"
            />
    </LinearLayout>



    <TextView
        android:id="@+id/HiLow"
        android:textSize="32sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/linear"
        android:layout_margin="40dp"
        />



</RelativeLayout>
